crates/swc_ecma_parser/tests/errors/issue-4991/1/input.js
const str = "meta";

console.log(import[str]);